--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "expo-linking": "~7.1.4",
     "expo-constants": "~17.1.6",
     "react-native-web": "^0.20.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "expo-camera": "~16.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
