--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "dependencies": {
     "expo": "~53.0.8",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
+    "expo-camera": "~16.1.6",
+    "expo-constants": "~17.1.6",
+    "expo-file-system": "~18.1.9",
+    "expo-linking": "~7.1.4",
     "expo-router": "~5.0.6",
+    "expo-status-bar": "~2.2.3",
+    "path": "^0.12.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "expo-linking": "~7.1.4",
-    "expo-constants": "~17.1.6",
-    "react-native-web": "^0.20.0",
-    "react-dom": "19.0.0",
-    "expo-camera": "~16.1.6"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
