--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-media-library": "~17.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
