--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0",
-    "expo-media-library": "~17.1.6"
+    "expo-media-library": "~17.1.6",
+    "expo-video": "~2.1.8",
+    "expo-video-thumbnails": "~9.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
